fix: Better display on tooltip when too much data to display on a line chart
Closes gravitee-io/issues#3244

--- a/src/index.scss
+++ b/src/index.scss
@@ -631,3 +631,23 @@ md-progress-circular {
   width: fit-content;
   min-width: 300px;
 }
+
+.gv-tooltip {
+  display: grid;
+}
+
+.gv-tooltip-2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.gv-tooltip-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.gv-tooltip-4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.gv-tooltip-5 {
+  grid-template-columns: repeat(5, 1fr);
+}
